# ppp-killer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  babel.cfg  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
app/: __main__.py  app.py  exceptions.py  i18n.py  logger.py  middlewares.py  provider.py  template.py  utils.py
app/config/: settings.py
app/models/: __init__.py  _mixin.py  _model.py  _schema.py  server.py  user.py
app/views/: __init__.py  server.py
locales/en_US/LC_MESSAGES/: messages.po
locales/ru_RU/LC_MESSAGES/: messages.po
static/js/: tabler.min.js
templates/: base.html  dashboard.html
templates/errors/: 401.html  403.html  404.html  500.html  maintenance.html
